--- a/index.html
+++ b/index.html
@@ -9,21 +9,45 @@
 </head>
 
 <body>
+    
     <header>
-        <h1 style="text-align: center;">Help Us Celebrate Lil Mac's 21st Birthday!</h1>
+        <h1>Help Us Celebrate Mac's 21st!</h1>
     </header>
 
     <div id="description">
-        <p>Help us make Lil Mac's 21st birthday unforgettable! We're raising funds to throw an awesome party filled with laughter, joy, and neon lights. Your contribution brings us one step closer to creating memories that will last a lifetime. Join us in making Lil Mac's celebration truly special!</p>
+        <p>THE Mackenzie Martin is officially throwing out the fake ID - come celebrate with us!</p>
+    </div>
+
+    <div id="details">
+        <table>
+            <tr>
+                <td class="category">Where:</td>
+                <td>Six11, apt 502</td>
+            </tr>
+            <tr>
+                <td class="category">When:</td>
+                <td>January 20 @ 8:00pm - don't be early</td>
+            </tr>
+            <tr>
+                <td class="category">Who:</td>
+                <td>This chick <br><br>
+                    <img src="kenz.gif">
+                </td>
+            </tr>
+            <tr>
+                <td class="category">How:</td>
+                <td>If you feel like it (no pressure) contribute to the party by venmoing any amount to @valarie-sherr with the description "21" attached. Take a look at what we're cooking up below.</td>
+            </tr>
+        </table>
     </div>
 
     <div id="thermometer">
         <!-- adjust based on levels and amounts needed-->
         <div id="fill"></div>
-        <div class="level" style="bottom: 25%;">Level 1: $50</div>
-        <div class="level" style="bottom: 50%;">Level 2: $100</div>
-        <div class="level" style="bottom: 75%;">Level 3: $150</div>
-        <div class="level" style="bottom: 100%;">Level 4: $200</div>
+        <div class="level" style="bottom: 25%;">Cocktail bar: $50</div>
+        <div class="level" style="bottom: 50%;">Balloons + Cake: $75</div>
+        <div class="level" style="bottom: 75%;">Drunk Candy: $100</div>
+        <div class="level" style="bottom: 100%;">Polaroid: $150</div>
     </div>
 
     <script>
