--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
         // adjust based on levels and amounts needed
         const levels = [
-            { amount: 500, label: 'Level 1' },
-            { amount: 100, label: 'Level 2' },
-            { amount: 150, label: 'Level 3' },
-            { amount: 200, label: 'Level 4' },
+            { amount: 500, label: 'Cocktail bar' },
+            { amount: 100, label: 'Balloons + Cake' },
+            { amount: 150, label: 'Drunk Candy' },
+            { amount: 200, label: 'Polaroid' },
         ];
 
         const fill = document.getElementById('fill');
